# sctransform-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: run_benchmarks.py
python/sctransform_rs/: __init__.py  anndata.py
recipe/: bld.bat  build.sh  meta.yaml
src/: glm.rs  lib.rs  residuals.rs
tests/: test_glm.py  test_residuals.py  test_smoke.py  test_vst.py
