[package]
name = "sctransform_rs"
version = "0.3.0"
edition = "2021"
description = "Rust backend for SCTransform normalization"
license = "MIT"
rust-version = "1.75"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py310"] }
numpy = "0.22"
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
statrs = "0.17"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
