[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "sctransform-rs"
version = "0.3.0"
description = "Fast Rust implementation of SCTransform normalization for scRNA-seq data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "sctransform-rs contributors" }]
keywords = [
    "single-cell",
    "scRNA-seq",
    "sctransform",
    "normalization",
    "bioinformatics",
    "rust",
    "pyo3",
    "scanpy",
    "anndata",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
anndata = ["anndata>=0.10", "scanpy>=1.9", "scipy"]
dev = ["pytest", "anndata>=0.10", "scanpy>=1.9", "scipy", "pandas"]

[project.urls]
Homepage = "https://github.com/edumenotti/sctransform-rs"
Repository = "https://github.com/edumenotti/sctransform-rs"
Issues = "https://github.com/edumenotti/sctransform-rs/issues"
Changelog = "https://github.com/edumenotti/sctransform-rs/releases"

[tool.maturin]
module-name = "sctransform_rs._core"
python-source = "python"
features = ["pyo3/extension-module"]
